--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
   "bugs": {
     "url": "https://github.com/bls/node-divsufsort/issues"
   },
-  "homepage": "https://github.com/bls/node-divsufsort#readme"
+  "homepage": "https://github.com/bls/node-divsufsort#readme",
+  "dependencies": {
+    "nan": "^1.8.4"
+  },
+  "devDependencies": {
+    "chai": "^3.0.0",
+    "mocha": "^2.2.5"
+  }
 }
