--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "divsufsort",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Node.js bindings for libdivsufsort.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec test"
   },
   "repository": {
     "type": "git",
